--- a/src/pages/ProfileSetup.css
+++ b/src/pages/ProfileSetup.css
@@ -31,6 +31,16 @@
   margin: 0;
 }
 
+.ps-hint {
+  font-size: var(--text-xs);
+  color: var(--color-text-muted);
+  margin-top: var(--space-1);
+}
+
+.ps-hint-error {
+  color: var(--color-error);
+}
+
 .profile-setup-form {
   display: flex;
   flex-direction: column;
